[tool.poetry]
name = "pingpong"
version = "0.1.2"
description = "My first game."
authors = ["data-tamer2410 <vitaliy.dayneko2410@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"
pygame = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
